Working on player / game management

--- a/YuFoot.Business.Contracts/YuFoot.Business.Contracts.csproj
+++ b/YuFoot.Business.Contracts/YuFoot.Business.Contracts.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\YuFoot.DTOs\YuFoot.DTOs.csproj" />
     <ProjectReference Include="..\YuFoot.Entities\YuFoot.Entities.csproj" />
   </ItemGroup>
 
