--- a/YuFoot.Business/YuFoot.Business.csproj
+++ b/YuFoot.Business/YuFoot.Business.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\YuFoot.Business.Contracts\YuFoot.Business.Contracts.csproj" />
+    <ProjectReference Include="..\YuFoot.DTOs\YuFoot.DTOs.csproj" />
     <ProjectReference Include="..\YuFoot.Repository.Contracts\YuFoot.Repository.Contracts.csproj" />
   </ItemGroup>
 
