--- a/YuFoot.WebAPI/Properties/launchSettings.json
+++ b/YuFoot.WebAPI/Properties/launchSettings.json
@@ -17,7 +17,9 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "SQLITE_PATH": "C:\\Users\\Valentin\\Desktop\\yufoot.db"
+        "SQLITE_PATH": "C:\\Users\\Valentin\\Desktop\\yufoot.db",
+        "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/yufoot",
+        "JWT_AUDIENCE": "account"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5184"
