Updated automatic player sign in behavior.

--- a/YuFoot.Repository/YuFoot.Repository.csproj
+++ b/YuFoot.Repository/YuFoot.Repository.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\YuFoot.Common\YuFoot.Common.csproj" />
     <ProjectReference Include="..\YuFoot.Entities\YuFoot.Entities.csproj" />
     <ProjectReference Include="..\YuFoot.Repository.Contracts\YuFoot.Repository.Contracts.csproj" />
   </ItemGroup>
