--- a/YuFoot.WebAPI/YuFoot.WebAPI.csproj
+++ b/YuFoot.WebAPI/YuFoot.WebAPI.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <ProjectReference Include="..\YuFoot.Business.Contracts\YuFoot.Business.Contracts.csproj" />
     <ProjectReference Include="..\YuFoot.Business\YuFoot.Business.csproj" />
+    <ProjectReference Include="..\YuFoot.Common\YuFoot.Common.csproj" />
     <ProjectReference Include="..\YuFoot.DTOs\YuFoot.DTOs.csproj" />
     <ProjectReference Include="..\YuFoot.Entities\YuFoot.Entities.csproj" />
     <ProjectReference Include="..\YuFoot.Repository.Contracts\YuFoot.Repository.Contracts.csproj" />
