--- a/YuGames.WebAPI/Properties/launchSettings.json
+++ b/YuGames.WebAPI/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "SQLITE_PATH": "/Users/leadon/Desktop/yufoot.db",
+        "SQLITE_PATH": "/Users/leadon/Desktop/yugames.db",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/yufoot",
         "JWT_AUDIENCE": "account"
       },
@@ -19,7 +19,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "SQLITE_PATH": "C:\\Users\\Valentin\\Desktop\\yufoot.db",
+        "SQLITE_PATH": "C:\\Users\\Valentin\\Desktop\\yugames.db",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/yufoot",
         "JWT_AUDIENCE": "account"
       },
