--- a/YuGames.WebAPI/appsettings.Development.json
+++ b/YuGames.WebAPI/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "SQLITE_PATH": "/Users/leadon/Desktop/yugames.db"
 }
