--- a/YuGames.EntitiesContext/YuGames.EntitiesContext.csproj
+++ b/YuGames.EntitiesContext/YuGames.EntitiesContext.csproj
@@ -43,4 +43,8 @@
     <ProjectReference Include="..\YuGames.Entities\YuGames.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
