--- a/YuGames.WebAPI/Properties/launchSettings.json
+++ b/YuGames.WebAPI/Properties/launchSettings.json
@@ -8,7 +8,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "SQLITE_PATH": "/Users/leadon/Desktop/yugames.db",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/yufoot",
-        "JWT_AUDIENCE": "account"
+        "JWT_AUDIENCE": "account",
+        "CURRENT_SEASON": "1"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5184"
