Upgraded Season Management System on some routes

--- a/YuGames.WebAPI/Properties/launchSettings.json
+++ b/YuGames.WebAPI/Properties/launchSettings.json
@@ -22,7 +22,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "SQLITE_PATH": "C:\\Users\\Valentin\\Desktop\\yugames.db",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/yufoot",
-        "JWT_AUDIENCE": "account"
+        "JWT_AUDIENCE": "account",
+        "CURRENT_SEASON": "2"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5184"
