--- a/YuGames.WebAPI/Properties/launchSettings.json
+++ b/YuGames.WebAPI/Properties/launchSettings.json
@@ -20,7 +20,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "SQLITE_PATH": "C:\\Users\\Valentin\\Desktop\\yugames.db",
+        "SQLITE_PATH": "C:\\Users\\valentin.virot\\Desktop\\yugames.db",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/yufoot",
         "JWT_AUDIENCE": "account",
         "CURRENT_SEASON": "2"
