--- a/YuGames.Common/YuGames.Common.csproj
+++ b/YuGames.Common/YuGames.Common.csproj
@@ -28,4 +28,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\YuGames.Domain\YuGames.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
