--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "SQLITE_PATH": "C:\\Users\\Valentin\\Desktop\\gameon.db",
+        "DB_CONNECTION_STRING": "Server=192.168.1.42;Port=3307;User=leadon;Password=9I%k#gV7@x7&XML#vnv4j1LjltQNUVEd;Database=gameon",
         "JWT_ISSUER": "testissuer",
         "JWT_AUDIENCE": "testaudience",
         "JWT_SECRETKEY": "ku%Ua*FP!MmIj@tm5gKLH6F2$pRln#Dw",
