Reverted back to using Keycloak as auth provider, updated documentation

--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -7,11 +7,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DB_CONNECTION_STRING": "Server=192.168.1.42;Port=3307;User=leadon;Password=9I%k#gV7@x7&XML#vnv4j1LjltQNUVEd;Database=gameon",
-        "JWT_ISSUER": "testissuer",
-        "JWT_AUDIENCE": "testaudience",
-        "JWT_SECRETKEY": "ku%Ua*FP!MmIj@tm5gKLH6F2$pRln#Dw",
-        "PASSWORD_PEPPER": "testPepper",
-        "PASSWORD_ITERATIONS": "3",
+        "JWT_AUTHORITY": "http://192.168.1.42:8080/realms/gameon",
+        "JWT_AUDIENCE": "account",
         "CURRENT_SEASON": "2",
         "DEFAULT_PLATFORM": "2"
       },
