--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=192.168.1.42;Port=3307;User=leadon;Password=9I%k#gV7@x7&XML#vnv4j1LjltQNUVEd;Database=gameon",
+        "DB_CONNECTION_STRING": "Server=xxx;Port=xxx;User=xxx;Password=xxx;Database=gameon",
         "JWT_AUTHORITY": "http://192.168.1.42:8080/realms/gameon",
         "JWT_AUDIENCE": "account",
         "CURRENT_SEASON": "4",
