--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -6,8 +6,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=xxx;Port=xxx;User=xxx;Password=xxx;Database=gameon",
-        "JWT_AUTHORITY": "http://192.168.1.42:8080/realms/gameon",
+        "DB_CONNECTION_STRING": "Server=xxx;Port=3306;User=xxx;Password=xxx;Database=xxx",
+        "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/gameon",
         "JWT_AUDIENCE": "account",
         "CURRENT_SEASON": "4",
         "DEFAULT_PLATFORM": "2"
