--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=xxx;Port=3306;User=xxx;Password=xxx;Database=xxx",
+        "DB_CONNECTION_STRING": "Server=xxx;Port=xxx;User=xxx;Password=xxx;Database=xxx",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/gameon",
         "JWT_AUDIENCE": "account",
         "CURRENT_SEASON": "4",
