--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -6,13 +6,14 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=192.168.1.42;Port=3306;User=gameondev;Password=dPis$L%T3Jv34VbP;Database=gameondev",
+        "DB_CONNECTION_STRING": "Server=;Port=;User=;Password=;Database=",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/gameon",
         "JWT_AUDIENCE": "account",
         "CURRENT_SEASON": "5",
         "DEFAULT_PLATFORM": "2",
         "RIOT_GAMES_ACCOUNT_API_ROUTE": "europe.api.riotgames.com",
-        "RIOT_GAMES_API_KEY": "RGAPI-9f99324f-bb33-4a71-8202-abf98f0187cd"
+        "RIOT_GAMES_SUMMONER_API_ROUTE": "euw1.api.riotgames.com",
+        "RIOT_GAMES_API_KEY": ""
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5184"
