--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -6,14 +6,14 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=192.168.1.42;Port=3306;User=gameondev;Password=dPis$L%T3Jv34VbP;Database=gameondev",
+        "DB_CONNECTION_STRING": "",
         "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/gameon",
         "JWT_AUDIENCE": "account",
         "CURRENT_SEASON": "5",
         "DEFAULT_PLATFORM": "2",
         "RIOT_GAMES_ACCOUNT_API_ROUTE": "europe.api.riotgames.com",
         "RIOT_GAMES_SUMMONER_API_ROUTE": "euw1.api.riotgames.com",
-        "RIOT_GAMES_API_KEY": "RGAPI-adc3e823-473a-4316-94c7-5f8dcbf78639"
+        "RIOT_GAMES_API_KEY": ""
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5184"
