--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -6,14 +6,14 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=192.168.1.42;Port=3306;User=gameonapi;Password=3!xRsFTWdyCD*$fUUS&rw&RHygs1bk1q;Database=gameonprod",
-        "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/gameon",
-        "JWT_AUDIENCE": "account",
-        "CURRENT_SEASON": "5",
-        "DEFAULT_PLATFORM": "2",
-        "RIOT_GAMES_ACCOUNT_API_ROUTE": "europe.api.riotgames.com",
-        "RIOT_GAMES_SUMMONER_API_ROUTE": "euw1.api.riotgames.com",
-        "RIOT_GAMES_API_KEY": "RGAPI-a415ebef-3890-4f11-b8db-a0181d79717b"
+        "DB_CONNECTION_STRING": "",
+        "JWT_AUTHORITY": "",
+        "JWT_AUDIENCE": "",
+        "CURRENT_SEASON": "",
+        "DEFAULT_PLATFORM": "",
+        "RIOT_GAMES_ACCOUNT_API_ROUTE": "",
+        "RIOT_GAMES_SUMMONER_API_ROUTE": "",
+        "RIOT_GAMES_API_KEY": ""
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5184"
