Added link between player and LoL game

--- a/GameOn.Domain/GameOn.Domain.csproj
+++ b/GameOn.Domain/GameOn.Domain.csproj
@@ -48,4 +48,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GameOn.External\GameOn.External.csproj" />
+  </ItemGroup>
+
 </Project>
