--- a/GameOn.Presentation/Properties/launchSettings.json
+++ b/GameOn.Presentation/Properties/launchSettings.json
@@ -1,19 +1,19 @@
 ﻿{
   "profiles": {
-    "Windows": {
+    "Local": {
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "",
-        "JWT_AUTHORITY": "",
-        "JWT_AUDIENCE": "",
-        "CURRENT_SEASON": "",
-        "DEFAULT_PLATFORM": "",
-        "RIOT_GAMES_ACCOUNT_API_ROUTE": "",
-        "RIOT_GAMES_SUMMONER_API_ROUTE": "",
-        "RIOT_GAMES_API_KEY": ""
+        "DB_CONNECTION_STRING": "Server=127.0.0.1;Port=3306;User=gameondev;Password=dPis$L%T3Jv34VbP;Database=gameon",
+        "JWT_AUTHORITY": "https://auth.valentinvirot.fr/realms/gameon",
+        "JWT_AUDIENCE": "account",
+        "CURRENT_SEASON": "6",
+        "DEFAULT_PLATFORM": "2",
+        "RIOT_GAMES_ACCOUNT_API_ROUTE": "europe.api.riotgames.com",
+        "RIOT_GAMES_SUMMONER_API_ROUTE": "euw1.api.riotgames.com",
+        "RIOT_GAMES_API_KEY": "RGAPI-f9a63f75-2650-4c95-b902-89bddb987ea0"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5184"
