--- a/GameOn.Application/GameOn.Application.csproj
+++ b/GameOn.Application/GameOn.Application.csproj
@@ -56,4 +56,10 @@
     <ProjectReference Include="..\GameOn.External\GameOn.External.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Features">
+      <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.6\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
