--- a/GameOn.Application/GameOn.Application.csproj
+++ b/GameOn.Application/GameOn.Application.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.7" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -54,12 +55,6 @@
     <ProjectReference Include="..\GameOn.Common\GameOn.Common.csproj" />
     <ProjectReference Include="..\GameOn.Domain\GameOn.Domain.csproj" />
     <ProjectReference Include="..\GameOn.External\GameOn.External.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Http.Features">
-      <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.6\Microsoft.AspNetCore.Http.Features.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
