--- a/GameOn.Common/GameOn.Common.csproj
+++ b/GameOn.Common/GameOn.Common.csproj
@@ -7,7 +7,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Title>GameOn! Common</Title>
     <Authors>LeadOn's Corp</Authors>
-    <Description>Common utilities used in the GameOn! project.</Description>
+    <Description>Common utilities used in the GameOn! app.</Description>
     <Copyright>LeadOn's Corp</Copyright>
     <PackageProjectUrl>https://www.valentinvirot.fr</PackageProjectUrl>
     <Company>LeadOn's Corp</Company>
@@ -16,6 +16,7 @@
     <RepositoryUrl>https://github.com/LeadOn/GameOn-API</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <ApplicationIcon>gameon-icon.ico</ApplicationIcon>
+    <Version>6.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
