--- a/GameOn.External/GameOn.External.csproj
+++ b/GameOn.External/GameOn.External.csproj
@@ -9,13 +9,14 @@
 	<Title>GameOn! External</Title>
 	<Authors>LeadOn</Authors>
 	<Company>LeadOn's Corp</Company>
-	<Description>External layer of the GameOn! project.</Description>
+	<Description>External layer of the GameOn! app.</Description>
 	<Copyright>LeadOn's Corp</Copyright>
 	<PackageProjectUrl>https://www.valentinvirot.fr</PackageProjectUrl>
 	<PackageIcon>gameon-icon.png</PackageIcon>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<RepositoryUrl>https://github.com/LeadOn/GameOn-API</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
+	<Version>6.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
