--- a/GameOn.External/GameOn.External.csproj
+++ b/GameOn.External/GameOn.External.csproj
@@ -16,8 +16,8 @@
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<RepositoryUrl>https://github.com/LeadOn/GameOn-API</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
-	<Version>6.2.2</Version>
-	<PackageReleaseNotes>Updated dependencies</PackageReleaseNotes>
+	<Version>6.2.4</Version>
+	<PackageReleaseNotes>Removed useless field on Player table.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
